syntax = "proto3";

option go_package = "./;protos";

message Reward {
    string customerId = 1;
    string description = 2;
    int32 points = 3;
}

message RewardRequest {
    string customerId = 1;
}

message RewardResponse {
    Reward reward = 1;
}

/********* To be refactored ***********/

message Product {
    // product id associated with a particular product
    string productId = 1;
    // reward associated with a particular product
    int32 reward = 2;
    // points associated with a particular product
    int32 points = 3;
    // count is the total number of product item with same product id in the cart
    int32 count = 4;
}


message CalculateRewardRequest {
    // total price of the current order on which reward is to be calculated
    int32 totalPrice = 1;
    // array of products with information related to Product
    repeated Product products = 2;
}

message CalculateRewardResponse {
    // final price is the total price of the order after deducting the reward/points
    int32 finalPrice = 1;
    // error represents the error occurred while creating the response
    string error = 2;
}

service RewardService {
    // Get the total reward currently associated with a customer with given customerId
    rpc GetReward(RewardRequest) returns (RewardResponse);

    // Calculates the final pricing after deducting the reward/points from the total price for the user
    rpc CalculateReward (CalculateRewardRequest) returns (CalculateRewardResponse);
}
